--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -1,14 +1,31 @@
+<link rel="stylesheet" href="dashboard.css">
+
 <%- include("header") -%>
 
 <section id="heading">
   <%- include("../components/heading") -%>
 </section>
 
-<section id="">
-
+<section id="grades" class="border-t-4 border-color">
+  <%- include("../components/grades") -%>
 </section>
 
-<%- include("footer") -%>
+<section id="about-us">
+  <%- include("../components/about") -%>
+</section>
+
+<section id="info">
+  <%- include("../components/contact") -%>
+</section>
+
+<section id="questions">
+  <%- include("../components/questions") -%>
+</section>
+
+<section id="contact">
+  <%- include("../components/footer") -%>
+</section>
 
 </body>
+
 </html>
