--- a/components/grades.ejs
+++ b/components/grades.ejs
@@ -1,12 +1,12 @@
-<div class="space-y-6 sm:px-6 lg:px-0 lg:col-span-9">
-    <div class="pb-20 px-4 sm:pt-12 sm:px-6 lg:pt-8 lg:pb-28 lg:px-8 div-container">
+<div class="mt-4 space-y-6 sm:px-6 lg:px-0 lg:col-span-9">
+    <div class="pb-20 px-4 sm:pt-12 sm:px-6 lg:pt-8 lg:pb-28 lg:px-8">
         <div class="max-w-7xl mx-auto">
             <div class="grid gap-5 max-w-sm mx-auto lg:grid-cols-3 lg:max-w-6xl">
-                <div class="flex flex-col rounded-lg shadow-bg-1 shadow-lg overflow-hidden ">
+                <div class="flex flex-col rounded-lg shadow-bg-1 overflow-hidden ">
                     <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                         <div class="flex-1">
                             <a href="/lista-problemas?grado=1" class="block">
-                                <h3 class="mt-2 text-xl leading-7 font-semibold text-orange-900">
+                                <h3 class="mt-2 text-xl leading-7 font-semibold text-orange-700">
                                     1º PRIMARIA
                                 </h3>
                                 <p class="mt-3 text-base leading-6 text-gray-500">
@@ -21,7 +21,7 @@
                     <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                         <div class="flex-1">
                             <a href="/lista-problemas?grado=2" class="block">
-                                <h3 class="mt-2 text-xl leading-7 font-semibold text-purple-900">
+                                <h3 class="mt-2 text-xl leading-7 font-semibold text-purple-700">
                                     2º PRIMARIA
                                 </h3>
                                 <p class="mt-3 text-base leading-6 text-gray-500">
@@ -36,7 +36,7 @@
                     <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                         <div class="flex-1">
                             <a href="/lista-problemas?grado=3" class="block">
-                                <h3 class="mt-2 text-xl leading-7 font-semibold text-yellow-900">
+                                <h3 class="mt-2 text-xl leading-7 font-semibold text-yellow-700">
                                     3º PRIMARIA
                                 </h3>
                                 <p class="mt-3 text-base leading-6 text-gray-500">
@@ -51,7 +51,7 @@
                     <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                         <div class="flex-1">
                             <a href="/lista-problemas?grado=4" class="block">
-                                <h3 class="mt-2 text-xl leading-7 font-semibold text-red-900">
+                                <h3 class="mt-2 text-xl leading-7 font-semibold text-red-700">
                                     4º PRIMARIA
                                 </h3>
                                 <p class="mt-3 text-base leading-6 text-gray-500">
@@ -82,7 +82,7 @@
                     <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                         <div class="flex-1">
                             <a href="/lista-problemas?grado=6" class="block">
-                                <h3 class="mt-2 text-xl leading-7 font-semibold text-blue-900">
+                                <h3 class="mt-2 text-xl leading-7 font-semibold text-blue-700">
                                     6º PRIMARIA
                                 </h3>
                                 <p class="mt-3 text-base leading-6 text-gray-500">
@@ -91,7 +91,6 @@
                                 </p>
                             </a>
                         </div>
-
                     </div>
                 </div>
             </div>
