--- a/components/heading.ejs
+++ b/components/heading.ejs
@@ -1,3 +1,14 @@
+<style>
+    #burger-menu {
+        display: none;
+    }
+
+    @media (min-width: 640px) {
+        #burger-menu {
+            display: none !important;
+        }
+    }
+</style>
 <div class="relative">
     <div class="relative h-16 border-b-2 border-gray-100">
         <div class="max-w-6xl mx-auto px-4 sm:px-6">
@@ -9,7 +20,8 @@
                 </div>
                 <span class="-mr-2 -my-2 md:hidden">
                     <button type="button"
-                        class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out">
+                        class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
+                        onclick="showBurgerMenu()">
                         <!-- Heroicon name: menu -->
                         <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -38,7 +50,7 @@
             </div>
         </div>
 
-        <div class="absolute top-0 inset-x-0 z-10 p-2 transition transform origin-top-right md:hidden">
+        <div id="burger-menu" class="absolute top-0 inset-x-0 z-10 p-2 transition transform origin-top-right md:hidden">
             <div class="rounded-lg shadow-lg">
                 <div class="rounded-lg shadow-xs bg-white divide-y-2 divide-gray-50">
                     <div class="pt-5 pb-6 px-5 space-y-6">
@@ -48,7 +60,8 @@
                             </div>
                             <div class="-mr-2">
                                 <button type="button"
-                                    class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out">
+                                    class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
+                                    onclick="showBurgerMenu()">
                                     <!-- Heroicon name: x -->
                                     <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -116,3 +129,21 @@
     </div>
     <%- include("./title") -%>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    let isBurgerMenuOpen = false;
+    function showBurgerMenu() {
+        var burgerMenu = document.getElementById("burger-menu");
+        if (isBurgerMenuOpen) {
+            burgerMenu.style.display = "none";
+            isBurgerMenuOpen = false;
+        }
+        else {
+            burgerMenu.style.display = "block";
+            isBurgerMenuOpen = true;
+        }
+    }
+</script>
