--- a/views/problem/problem.ejs
+++ b/views/problem/problem.ejs
@@ -7,21 +7,31 @@
 <body>
 
     <a href="/lista-problemas">
-        <i class="fas fa-arrow-left text-4xl mt-5 ml-5 mb-3"></i>
+        <svg class="w-10 h-10 mt-5 ml-5 mb-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18">
+            </path>
+        </svg>
     </a>
-
+    <br>
     <div class="flex justify-between flex-col lg:flex-row  mt-3 mb-8">
 
         <section class="w-11/12 mx-auto  lg:w-2/5 lg:mx-4 ">
 
             <aside class="rounded-lg shadow-lg">
                 <div id="pestanas" class="w-full flex justify-between">
-                    <button id="redaccion" class="text-center rounded-t-lg outline pestana active">Redacción <i
-                            class="fas fa-search"></i> </button>
-                    <button id="pistas" class="text-center rounded-t-lg outline pestana">Pistas <i
-                            class="fab fa-readme"></i></button>
-                    <button id="solucion" class="text-center rounded-t-lg outline pestana">Solución <i
-                            class="fas fa-poll-h"></i></button>
+                    <button id="redaccion" class="text-center rounded-t-lg outline pestana active">
+                        Redacción
+                        <i class="fas fa-search"></i>
+                    </button>
+                    <button id="pistas" class="text-center rounded-t-lg outline pestana">
+                        Pistas
+                        <i class="fab fa-readme"></i>
+                    </button>
+                    <button id="solucion" class="text-center rounded-t-lg outline pestana">
+                        Solución
+                        <i class="fas fa-poll-h"></i>
+                    </button>
                 </div>
 
                 <div id="contenido-redaccion" class="contenido bg-white px-2 py-4">
