--- a/views/ranking/ranking.ejs
+++ b/views/ranking/ranking.ejs
@@ -2,23 +2,24 @@
 <script src="https://kit.fontawesome.com/52e276fb65.js" crossorigin="anonymous"></script>
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 <link rel="stylesheet" href="body.css">
+<link rel="stylesheet" href="ranking.css">
 
 <body>
 
     <%- include("./../../components/navbar") -%>
 
     <div class="flex items-end flex-wrap w-5/6 md:w-1/3 mx-auto mt-5 text-center">
-        <div class="w-1/3 font-semibold uppercase bg-yellow-500 h-32">
+        <div class="w-1/3 font-semibold uppercase bg-second-place h-32">
             <i class="fas fa-space-shuttle mt-3"></i>
             <br>
             <%= tops[1] ?  tops[1].name : 2 %>
         </div>
-        <div class="w-1/3 font-semibold uppercase bg-green-500 h-48">
+        <div class="w-1/3 font-semibold uppercase bg-first-place h-48">
             <i class="fas fa-trophy mt-3"></i>
             <br>
             <%= tops[0] ?  tops[0].name : 1 %>
         </div>
-        <div class="w-1/3 font-semibold uppercase bg-orange-500 h-24">
+        <div class="w-1/3 font-semibold uppercase bg-third-place h-24">
             <i class="fas fa-place-of-worship mt-3"></i>
             <br>
             <%= tops[2] ?  tops[2].name : 3 %>
@@ -26,7 +27,7 @@
     </div>
 
     <table class="border-separate border-2 border-gray-500 md:w-3/4 my-10 mx-auto bg-white">
-        <thead class="bg-teal-500">
+        <thead class="bg-thead">
             <tr>
                 <th class="border border-gray-400 px-4 py-2 text-gray-800"> # </th>
                 <th class="border border-gray-400 px-4 py-2 text-gray-800"> NOMBRE </th>
@@ -38,14 +39,14 @@
         <tbody>
             <% allUsers.forEach( (element, index) => { %>
             <% if(element.id == userId) { %>
-            <tr class="bg-blue-200 hover:bg-blue-300">
+            <tr class="bg-selected">
                 <td class="border border-gray-400 px-4 py-2 font-semibold text-center"> <%= index+1 %> </td>
                 <td class="border border-gray-400 px-4 py-2 font-semibold text-center">
                     <i class="fas fa-user mr-2"></i>
                     <%= element.name %> <%= element.lastName %>
                 </td>
                 <% } else { %>
-            <tr class="hover:bg-blue-300">
+            <tr>
                 <td class="border border-gray-400 px-4 py-2 font-semibold text-center"> <%= index +1 %> </td>
                 <td class="border border-gray-400 px-4 py-2 text-center"> <%= element.name %> <%= element.lastName %>
                 </td>
