--- a/views/problemsBoard.ejs
+++ b/views/problemsBoard.ejs
@@ -31,7 +31,7 @@
                     <div>
                         <%if (problems != "") { %>
                         <table class="table-auto w-full">
-                            <thead class="bg-gray-500">
+                            <thead class="bg-thead">
                                 <tr>
                                     <th class="px-4 py-2 text-left hidden md:block">ID</th>
                                     <th class="px-4 py-2 text-left">Título</th>
