correction of back end

--- a/components/inputAnswer.ejs
+++ b/components/inputAnswer.ejs
@@ -31,17 +31,23 @@
     </div>
 </div>
 <aside>
-    <div class="flex justify-center mb-5" id="single-answer">
-        <input placeholder="Tu respuesta" type="text" name="answer" id="single-answer-input" class="bg-gray-200 w-10/12 h-16 rounded-lg mx-auto py-3 px-3 shadow-inner outline"/>
-    </div>
-
-    <div class="flex justify-around flex-row flex-wrap my-5 " id="multiple-answer">
-        <input type="text" value="" class="hidden" id="multiple-answer-input">
-        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card bg-blue-100" data-answer="hola1"> Respuesta 1 </div>
-        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card bg-blue-100" data-answer="hola2"> Respuesta 2 </div>
-        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card bg-blue-100" data-answer="hola3"> Respuesta 3 </div>
-    </div>
-
+    <% if (problem.type === 'Abierta') {   %>
+        <div class="flex justify-center mb-5" id="single-answer">
+            <input placeholder="Tu respuesta" type="text" name="answer" id="single-answer-input" class="bg-gray-200 w-10/12 h-16 rounded-lg mx-auto py-3 px-3 shadow-inner outline"/>
+        </div>
+    
+    <% } else {  %>
+        <div class="flex justify-around flex-row flex-wrap my-5 " id="multiple-answer">
+            <input type="text" value="" class="hidden" id="multiple-answer-input">
+            <%for (var i = 0; i < problem.answerOptions.length; i++){%>
+                <%if (0 != problem.answerOptions[i].localeCompare("")) { %>
+                    <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card bg-blue-100" data-answer="<%=problem.answerOptions[i]%>">  <%=problem.answerOptions[i]%> </div>
+                <%}%>
+                               
+            <%}%>
+            
+        </div>
+    <%   }  %>
     <div class="flex justify-center mb-3">
         <% if (length-1 === index) {   %>
         <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded outline" id="submit">
