--- a/views/problem/problem.ejs
+++ b/views/problem/problem.ejs
@@ -134,7 +134,8 @@
             $('#correct_banner').removeClass('hidden');
 
             var info = {
-                responses: ["<%- problem._id %>"]
+                responses: ["<%- problem._id %>"],
+                type: "normal"
             };
 
             $.post("/submit-answer", info, function(data) {
