--- a/components/navbar.ejs
+++ b/components/navbar.ejs
@@ -32,7 +32,7 @@
                         class="problemas ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
                         Problemas
                     </a>
-                    <a href="/rafaga"
+                    <a href="/all-blasts"
                         class="rafaga ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
                         Ráfagas
                     </a>
